# eng-indic-transformer

./: .gitignore  Makefile  README.md  pyproject.toml
en-indic-transformer/: components.py
en_indic_transformer/: __init__.py  components.py  dataset.py  model.py  processing.py  tokenizer.py
notebooks/: (1)_download_data.ipynb  (2)_dataset.ipynb  (3)_en_hindi_train.ipynb  (3)_hf_pull.ipynb  (4)_en_hindi_train.ipynb  (5)_hf_push.ipynb  dataset.ipynb  download_data.ipynb  example.ipynb  train.ipynb
notebooks/inference/: (1)_hf_inference_pull.ipynb  (2)_inference.ipynb
notebooks/train/: (1)_download_data.ipynb  (2)_dataset.ipynb  (3)_hf_pull.ipynb  (4)_en_hindi_train.ipynb  (5)_hf_push.ipynb
requirements/: requirements.txt  requirements_dev.txt
tokenizer/: tokenizer.model  tokenizer.vocab
